<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Generation2You</string>
    <string name="signIn">Sign In</string>
    <string name="signUp_Elder">Sign up as Senior</string>
    <string name="signUp_Young">Sign up as Volunteer</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="signInDivider">OR CREATE A NEW ACCOUNT</string>
	<string name="likesSubmit">Submit</string>
	<string name="likesLabel">Likes</string>
	<string name="dislikesLabel">Dislikes</string>
	<string name="likesHint">List your likes.</string>
	<string name="dislikesHint">List your dislikes.</string>
	
</resources>
