<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>
		
		<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/likesLabel"
		android:testStyle="bold"
		/>
		<TextView
		android:id="@+id/likesText"
		android:layout_width="match_parent"
		android:minHeight="48"
		android:layout_height="wrap_content"
		android:hint"@string/likesHint"
		android:editable="true"
		/>
		
		<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/dislikesLabel"
		android:testStyle="bold"
		/>
		<TextView
		android:id="@+id/dislikesText"
		android:layout_width="match_parent"
		android:minHeight="48"
		android:layout_height="wrap_content"
		android:hint"@string/dislikesHint"
		android:editable="true"
		/>
		
		<Button
       android:id="@+id/buttonSubmit"  
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
	   android:layout_weight="1"
       android:text="@string/likesSubmit" /> 
	   
</LinearLayout>