<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.spal.generation2you.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="185dp"
            android:layout_gravity="center"
            android:src="@drawable/without_background" />
        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/usernameHint"/>
        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <Button
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/signIn"
            android:onClick="openPage"
            android:background="@color/colorAccent"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </LinearLayout>

    <TextView android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainContent"
        android:layout_centerHorizontal="true"
        android:textColor="#777777"
        android:text="@string/signInDivider"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <View android:id="@+id/leftLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#777777"
        android:layout_alignStart="@id/mainContent"
        android:layout_toStartOf="@id/or"
        android:layout_alignTop="@id/or"
        android:layout_marginTop="7dp"/>

    <View android:id="@+id/rightLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#777777"
        android:layout_toEndOf="@id/or"
        android:layout_alignEnd="@id/mainContent"
        android:layout_alignTop="@id/or"
        android:layout_marginTop="7dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom">

        <Button
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/signUp_Elder"
            android:onClick="seniorSignUp"
            android:background="@color/colorAccent"/>
        <Button
            android:textColor="#FFFFFF"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/signUp_Young"
            android:onClick="volunteerSignUp"
            android:background="@color/colorAccent"/>
    </LinearLayout>
</RelativeLayout>
